[gd_scene load_steps=3 format=3 uid="uid://brlcfypgfr5lr"]

[ext_resource type="Script" uid="uid://4n0tkpdic6i7" path="res://Components/PressurePad/pressure_pad.gd" id="1_v0ddx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v0ddx"]
size = Vector2(100, 10)

[node name="PressurePad" type="Area2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource("1_v0ddx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_v0ddx")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
